# crowdyfunds.com

./: .gitignore  LICENSE
backend/: pyproject.toml
backend/backend/: settings.py
backend/crowdy/: admin.py  apps.py  models.py
backend/crowdy/migrations/: 0001_initial.py  0002_alter_company_file_alter_company_picture.py
docs/: CNAME  index.html
